@@ -567,7 +567,9 @@ will not accept drop file events.}
 
 \wxheading{Remarks}
 
-Windows only.
+Windows only until version 2.8.9, available on all platforms since 2.8.10.
+Cannot be used together with \helpref{SetDropTarget}{wxwindowsetdroptarget} on
+non-Windows platforms.
 
 
 \membersection{wxWindow::Enable}\label{wxwindowenable}
