@@ -25,7 +25,9 @@
 
 # public symbols added in 2.8.10 (please keep in alphabetical order):
 @WX_VERSION_TAG@.10 {
+        *wxCArrayString*Release*;
         *wxDCBase*GetFontPointSizeAdjustment*;
+        *wxWindowBase*DragAcceptFiles*;
 };
 
 # public symbols added in 2.8.9 (please keep in alphabetical order):
